--- a/Sources/Conclusion.tex
+++ b/Sources/Conclusion.tex
@@ -5,6 +5,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
+\todo{mention incompatibility between distributivity and effects}
+
 
 \section{On Categorical Semantics}
 \label{sec:category}
