--- a/Thesis.bib
+++ b/Thesis.bib
@@ -1309,3 +1309,24 @@ booktitle = {Archiv. Math. Logik}
   COMPLETE = {Incomplete},
   NOTE = {Second edition, 1968}
 }
+
+
+@article{swierstra_2008,
+  title={Data types à la carte},
+  volume={18},
+  number={4},
+  journal={Journal of Functional Programming},
+  publisher={Cambridge University Press},
+  author={Swierstra, Wouter},
+  year={2008},
+  pages={423–436}
+}
+
+
+@article{ernst2004expression,
+  title={The expression problem, Scandinavian style},
+  author={Ernst, Erik},
+  journal={On Mechanisms For Specialization},
+  pages={27},
+  year={2004}
+}
