--- a/Sources/Introduction.tex
+++ b/Sources/Introduction.tex
@@ -27,8 +27,11 @@ inheritance, mixins, traits, extensible designs) by a single underlying
 mechanism.
 
 
-\section{(Disjoint) Intersection Types}
+\section{Motivation}
 
+
+
+\section{(Disjoint) Intersection Types}
 
 A central theme of this thesis is \textit{intersection types} (usually written $\inter{A}{B}$). Intersection
 types~\citep{pottinger1980type, coppoInter} have a long history in
@@ -300,20 +303,19 @@ a more in-depth and consistent treatment of disjoint intersection types.
   In \textit{European Conference on Object-Oriented Programming (ECOOP)}.
 \end{itemize}
 
-
-The author also contributed to the following publications that do not directly
-relate to the topics of this thesis:
-\begin{itemize}
-\item Ningning Xie, Xuan Bi, Bruno C. d. S. Oliveira. 2018. ``Consistent Subtyping for All''.
-  In \textit{European Symposium on Programming (ESOP)}.
-\item Yanpeng Yang, Xuan Bi, Bruno C. d. S. Oliveira. 2016. ``Unified Syntax with
-  Iso-Types''. In \textit{Asian Symposium on Programming Languages and
-    Systems (APLAS)}.
-\item Tomas Tauber, Xuan Bi, Zhiyuan Shi, Weixin Zhang, Huang Li, Zhenrui Zhang,
-  Bruno C. d. S. Oliveira. 2015. ``Memory-efficient Tail Calls in the JVM with
-  Imperative Functional Objects''. In \textit{Asian Symposium on
-    Programming Languages and Systems (APLAS)}.
-\end{itemize}
+% The author also contributed to the following publications that do not directly
+% relate to the topics of this thesis:
+% \begin{itemize}
+% \item Ningning Xie, Xuan Bi, Bruno C. d. S. Oliveira. 2018. ``Consistent Subtyping for All''.
+%   In \textit{European Symposium on Programming (ESOP)}.
+% \item Yanpeng Yang, Xuan Bi, Bruno C. d. S. Oliveira. 2016. ``Unified Syntax with
+%   Iso-Types''. In \textit{Asian Symposium on Programming Languages and
+%     Systems (APLAS)}.
+% \item Tomas Tauber, Xuan Bi, Zhiyuan Shi, Weixin Zhang, Huang Li, Zhenrui Zhang,
+%   Bruno C. d. S. Oliveira. 2015. ``Memory-efficient Tail Calls in the JVM with
+%   Imperative Functional Objects''. In \textit{Asian Symposium on
+%     Programming Languages and Systems (APLAS)}.
+% \end{itemize}
 
 
 \section{Structure of the Thesis}
