--- a/Thesis.bib
+++ b/Thesis.bib
@@ -1330,3 +1330,12 @@ booktitle = {Archiv. Math. Logik}
   pages={27},
   year={2004}
 }
+
+@inproceedings{cook:multi,
+ author = {Cook, Steve},
+ title = {Varieties of inheritance},
+ booktitle = {Addendum to the Proceedings on Object-oriented Programming Systems, Languages and Applications (Addendum)},
+ year = {1987},
+ pages = {35--40},
+ numpages = {6}
+}
