--- a/Sources/Nested/typesystem.tex
+++ b/Sources/Nested/typesystem.tex
@@ -1,5 +1,5 @@
 
-\newcommand{\rulehl}[2][gray!40]{%
+\renewcommand{\rulehl}[2][gray!40]{%
   \colorbox{#1}{$\displaystyle#2$}}
 
 \section{Syntax and Semantics of the Source}
