--- a/Sources/Background.tex
+++ b/Sources/Background.tex
@@ -56,7 +56,7 @@ on intersection types.
 Three subtyping rules capture the order-theoretic properties of intersection types:
 \begin{mathpar}
   \inferrule*[right=S-interL]{ }{ [[A & B <: A]] } \and
-  \inferrule*[right=S-interR]{ }{ [[A & B <: A]] } \and
+  \inferrule*[right=S-interR]{ }{ [[A & B <: B]] } \and
   \inferrule*[right=S-inter]{ [[C <: A]] \\ [[ C <: B  ]]  }{ [[C <: A & B ]] }
 \end{mathpar}
 Two nice consequences follow:
@@ -95,14 +95,14 @@ These two rules, though intuitively reasonable, will have a strong effect on bot
 syntactic and semantics properties of the language. For example, \rref{S-distArr} implies that
 $[[ Top <: A -> Top ]]$ for any $[[A]]$; and \rref{S-distRcd} implies that $[[  Top <: {l : Top} ]]$.
 
-The introduction form of intersection types says that a term $[[e]]$ can be
-assigned an intersection type $[[A & B]]$ if it inhabits both $[[A]]$ and
+The introduction form of intersection types says that a term $[[ee]]$ can be
+given type $[[A & B]]$ if it inhabits both $[[A]]$ and
 $[[B]]$:
 \[
-    \inferrule*[right=T-interI]{ [[e : A1]] \\  [[e : A2]]   }{   [[e : A1 & A2]]   }
+    \inferrule*[right=T-interI]{ [[ee : A1]] \\  [[ee : A2]]   }{   [[ee : A1 & A2]]   }
 \]
 The corresponding elimination form allows us to derive, given a derivation of
-$[[ e : A1 & A2 ]]$, that $[[e : A1]]$ and $ [[e : A2]]$. But this already
+$[[ ee : A1 & A2 ]]$, that $[[ee : A1]]$ and $ [[ee : A2]]$. But this already
 follows from \rref{S-interL,S-interR} and the subsumption rule; so we need not
 to add the elimination rule explicitly to the calculus.
 
@@ -112,7 +112,7 @@ to add the elimination rule explicitly to the calculus.
 
 Intersection types were first incorporated into a practical programming language
 named Forsythe by \cite{reynolds1988preliminary, reynolds1997design}. who used
-them to encode features such as operator overloading by means of a so-called
+them to encode features such as operator overloading by means of a
 ``merge'' operator $p_1 ,, p_2$ --- ``a construction for intersecting or
 `merging' meanings''~\citep[p. 24]{reynolds1997design}.
 (\citeauthor{reynolds1997design} actually used single comma $p_1 , p_2$,
@@ -122,54 +122,53 @@ records by using intersection types; similar ideas also appear in
 \citet{Castagna_1992}. The idea is to have only single-field records with the introduction form $[[ { l = e } ]]$ of type $[[ {l : A} ]]$ and
 the usual eliminations (projection and pattern matching). Thus instead of
 \[
-  [[ {  l1 = e1, ... , ln = en   }       ]]
+  [[ {  l1 = ee1, ... , ln = een   }       ]]
 \]
 we can write
 \[
-  [[ { l1 = e1} ,, ... ,, {ln = en} ]]
+  [[ { l1 = ee1} ,, ... ,, {ln = een} ]]
 \]
 which plays nicely with the syntactic sugar of multiple-field record types as
 an intersection of single-field record types.
 
 More recently, \citet{dunfield2014elaborating} developed a method for
 elaborating intersections and unions into products and sums. Central to his
-approach is a source-level \textit{merge operator} $[[e1 ,, e2]]$, reminiscent
+approach is a source-level \textit{merge operator} $[[ee1 ,, ee2]]$, reminiscent
 of Forsythe~\citep{reynolds1997design}, which embodies several computationally
 distinct terms, and can be checked against various parts of an intersection
 type. In his system, the introduction form of intersection types is still
 \rref{T-interI}, and two additional rules for the merge operator are added:
 \begin{mathpar}
-    \inferrule*[right=T-mergeL]{ [[  e1 : A  ]]   }{ [[  e1 ,, e2 : A   ]] } \and
-    \inferrule*[right=T-mergeR]{ [[  e2 : A  ]]   }{ [[  e1 ,, e2 : A   ]] }
+    \inferrule*[right=T-mergeL]{ [[  ee1 : A  ]]   }{ [[  ee1 ,, ee2 : A   ]] } \and
+    \inferrule*[right=T-mergeR]{ [[  ee2 : A  ]]   }{ [[  ee1 ,, ee2 : A   ]] }
 \end{mathpar}
 In other words, a merge expression can choose to type one subterm and ignore the
-other. In combination of \rref{T-interI}, these two rules allow to type check
-two distinct implementations $[[e1]]$ and $[[e2]]$ with completely different
-types $[[A1]]$ and $[[A2]]$ of the intersection. For example, let $[[e1]] = [[\x . x]]$ and $[[e2]] = 1$,
-then the type $[[ (nat -> nat) & nat ]]$ is inhabited by $[[ e1 ,, e2  ]]$:
+other. In combination of \rref{T-interI}, they allow to type check
+two distinct implementations $[[ee1]]$ and $[[ee2]]$ with completely different
+types $[[A1]]$ and $[[A2]]$ of the intersection. For example, let $[[ee1]] = [[\x . x]]$ and $[[ee2]] = 1$,
+then the type $[[ (nat -> nat) & nat ]]$ is inhabited by $[[ ee1 ,, ee2  ]]$:
 \[
   \inferrule*[right=T-interI]
   { \inferrule*[right=T-mergeL]
-    { [[ e1 : nat -> nat  ]] }
-    {[[e1 ,, e2 : nat -> nat]]}
+    { [[ ee1 : nat -> nat  ]] }
+    {[[ee1 ,, ee2 : nat -> nat]]}
     \\
     \inferrule*[right=T-mergeR]
-    { [[ e2 : nat  ]] }
-    {[[e1 ,, e2 : nat]]}
+    { [[ ee2 : nat  ]] }
+    {[[ee1 ,, ee2 : nat]]}
   }
-  { [[  e1 ,, e2 : (nat -> nat) & nat   ]] }
+  { [[  ee1 ,, ee2 : (nat -> nat) & nat   ]] }
 \]
 
 \citeauthor{dunfield2014elaborating} then showed how to give a semantics to a
 calculus with unrestricted intersection types by a type-directed elaboration to
 a simply-typed $\lambda$-calculus extended with tuples. For example, the
 expression $[[ (\x . x) ,, 1 ]]$ elaborates to a tuple $[[ <\x. x , 1> ]]$. As
-usual, his system does not have source-level intersection eliminations;
+usual, his system does not have explicit source-level intersection eliminations;
 elaboration puts all needed projections into the target program. For example,
-the subtyping axiom $[[A & B <: A]]$ is translated to a coercion function $[[ \x . pp1 x ]]$
-with the first projection. The type-directed elaboration is elegant,
-type-safe, and serves as the original foundation for type systems with disjoint
-intersection types.
+the same expression $[[ (\x . x) ,, 1 ]]$, when checked against $[[nat]]$, elaborates to $[[ pp2 <\x. x , 1> ]]$. The
+type-directed elaboration is elegant, type-safe, and serves as the original
+foundation for type systems with disjoint intersection types.
 
 
 \subsection{Coherence}
@@ -185,43 +184,86 @@ is an important disadvantage for adopting his calculus in implementations of
 programming languages. \citeauthor{dunfield2014elaborating} left it as an open
 problem. To recover a coherent semantics, we could limit the merges according to
 their surface syntax, as \citeauthor{reynolds1988preliminary} did in Forsythe.
-But as \citeauthor{dunfield2014elaborating} pointed out, ``crafting an
+But as \citet{dunfield2014elaborating} pointed out, ``crafting an
 appropriate syntactic restriction depends on details of the type system, which
 is not robust as the type system is extended''. The issue of coherence is later
 addressed in an elegant way by \citet{oliveira2016disjoint} with the notion of
 \textit{disjoint intersection types}.
 
+\newcommand{\rulehl}[1]{#1}
 
 \subsection{Disjoint Intersection Types}
 
-Disjoint intersection types~\citep{oliveira2016disjoint} provide a remedy for the coherence problem, by
-imposing restrictions on the uses of merges and on the formation of intersection
-types. Central to their approach is the notion of \textit{disjointness}. In a
-nutshell, for two types $[[A]]$ and $[[B]]$ to be disjoint (written $[[A ** B]]$), they must not have any sub-components
-sharing the same type. In a type system without $[[Top]]$, this can be ensured
-by the following definition:
+\begin{figure}
+  \centering
+  \begin{small}
+  \drules[s]{$[[A <: B ~~> e]]$}{Subtyping}{int, top, arr, and, andl, andr}
+  \drules[wf]{$[[GG |- A]]$}{Well-formedness of types}{int, top, and, arr}
+  \drules[T]{$[[GG  |- ee => A ~~> e]]$}{Inference}{top, lit, var, app, anno, merge}
+  \drules[T]{$[[GG  |- ee <= A ~~> e]]$}{Checking}{lam, Sub}
+  \end{small}
+  \caption{Type system of \oname}
+  \label{fig:lambdai}
+\end{figure}
+
+Disjoint intersection types, first introduced in the \oname
+calculus~\citep{oliveira2016disjoint} provide a remedy for the coherence
+problem, by imposing restrictions on the uses of merges and on the formation of
+intersection types. Its full type system is shown in \cref{fig:lambdai}. Central
+to their approach is the notion of \textit{disjointness}. As a first
+approximation, for two types $[[A]]$ and $[[B]]$ to be disjoint (written $[[A ** B]]$),
+they must not have any sub-components sharing the same type. In a type
+system without $[[Top]]$, this can be ensured by the following specification:
+
 \begin{definition}[Simple disjointness] \label{def:disjoint_spec}
   $[[A ** B]] \defeq  \nexists C.\ [[A <: C]] \land [[B <: C]]$
 \end{definition}
-\noindent which is then used in the typing rule of merges and the well-formedness of intersection types:
-\begin{mathpar}
-    \inferrule*[right=T-merge]{ [[  e1 : A  ]] \\ [[ e2 : B]] \\ [[A ** B]]   }{ [[  e1 ,, e2 : A & B   ]] } \and
-    \inferrule*[right=WF-inter]{ [[  GG |- A   ]] \\ [[ GG |- B ]] \\ [[ A ** B  ]]   }{ [[   GG |- A & B   ]] }
-\end{mathpar}
-Now the expression $[[1 ,, 2]]$ is not typable because $[[nat]]$ and $[[nat]]$
-are not disjoint (they have a common supertype $[[nat]]$). Combined with
-bidirectional type-checking, \citet{oliveira2016disjoint} formalized the
-\oname calculus, with the property that says there is at most one elaboration derivation
-for any expression, and as a consequence, there is only one possible target
-program and thus coherence follows trivially.
+
+Disjointness judgment is used in the typing rule of merges (\rref{T-merge}) and
+the well-formedness of intersection types (\rref{wf-and}). Now the expression
+$[[1 ,, 2]]$ is not typable because $[[nat]]$ and $[[nat]]$ are not disjoint
+(they have a common supertype $[[nat]]$). To ensure that subtyping produces
+unique coercions, they also employ the notion of \textit{ordinary types} ---
+those which are not intersection types --- and use the judgment $[[ A ord ]]$ in
+\rref{s-andl, s-andr}. Ordinary types and disjointness are sufficient to ensure
+a coherent semantics of a type system without $[[Top]]$.
+
+$[[Top]]$ brings extra complication, because \cref{def:disjoint_spec} does not
+hold anymore ($[[Top]]$ is trivially a supertype of every type). To address this
+problem, the notion of \textit{top-like types} were introduced, which are those
+types that behave as $[[Top]]$ (such as $[[Top & Top]]$, $[[A -> Top]]$), and
+captured by a predicate $ \rceil \cdot \lceil $. With top-types,
+\cref{def:disjoint_spec} is refined to account for $[[Top]]$, as shown in
+\cref{def:disjoint_spec2}. However, a careful analysis of
+\cref{def:disjoint_spec2} shows that intersection types such as $[[ Top & Top
+]]$ and $[[Top & nat]]$ are not well-formed because their constitute types are
+not disjoint. This is one of the limitations in \oname, since a merge of two
+$[[Top]]$-types will always return the same value regardless of which component
+of the merge is chosen. In other words, $[[Top]]$ is always disjoint to every
+other type. This restriction was later lifted by \citet{alpuimdisjoint} in the
+\fname calculus by a set of inference rules, but whether a specification of
+disjointness exists or not was not known at that time. We will present a
+suitable specification in \cref{sec:category}.
+
+\begin{definition}[$[[Top]]$-Disjointness] \label{def:disjoint_spec2}
+  $[[A ** B]] \defeq \neg \rceil [[A]] \lceil \ \land \ \neg \rceil [[B]] \lceil \ \land \
+  (\forall C.\ [[A <: C]] \land [[B <: C]] \Longrightarrow \rceil [[C]] \lceil)$
+\end{definition}
+
+Combined with bidirectional type-checking, \citet{oliveira2016disjoint}
+formalized the \oname calculus in Coq and prove that there is at most one
+elaboration derivation for any expression, and as a consequence, there is only
+one possible target program and thus coherence follows trivially. We refer the
+reader to their paper for a detailed account of \oname.
 
 In essence disjoint intersection types retain most of the expressive power of
 the merge operator. For example, they can be used to model powerful forms of
 extensible records~\citep{alpuimdisjoint}. However, forcing every intersection
 types to be disjoint is unnecessarily restrictive. For instance,
-$[[1 : nat & nat]]$ is undoubtedly unambiguous, but is rejected by \oname. Our starting point
-in this thesis is to lift this restriction and makes room for more
-expressiveness for calculi with disjoint intersection types.
+$[[1 : nat & nat]]$ is undoubtedly unambiguous, but is rejected by \oname and \fname. Our
+starting point in this thesis is to lift this restriction and makes room for
+more expressiveness for calculi with disjoint intersection types.
+
 
 
 \section{Family Polymorphism and Nested Composition}
@@ -392,11 +434,6 @@ class LangNegEval extends LangEval & LangNeg {
 \end{lstlisting}
 The only effort required is to implement the one missing operation
 case, evaluation of negated expressions.
-
-% \paragraph{A solution in \namee using nested composition:} Show a
-% solution in \namee with records implemented in SEDEL. Justify the connection to the
-% class-based solution. Mention that type system support
-% for family polymorphism is known to be hard.
 
 
 \section{Mixins and Traits}
