--- a/Sources/Poly/elaboration.tex
+++ b/Sources/Poly/elaboration.tex
@@ -60,7 +60,7 @@ $[[B2]]$.
   \drules[wfe]{$[[ dd |- gg   ]]$}{Well-formedness of value context}{empty, var}
   \drules[wft]{$[[ dd |- T   ]]$}{Well-formedness of types}{int, var, arrow,prod, all}
   \drules[Ft]{$[[ dd ; gg |- e : T ]]$}{Static semantics}{unit, int, var, abs, app, tabs, tapp, pair, capp}
-  \caption{\tnamee static semantics}
+  \caption{Typing rules of \tnamee}
   \label{fig:typing:fco}
 \end{figure}
 
